; ModuleID = '/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_redis.c_redis_argn.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_redis.c_redis_argn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.msg*)* @redis_argn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @redis_argn(%struct.msg* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.msg*, align 8
  store %struct.msg* %0, %struct.msg** %3, align 8
  %4 = load %struct.msg*, %struct.msg** %3, align 8
  %5 = getelementptr inbounds %struct.msg, %struct.msg* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %8 [
    i32 144, label %7
    i32 160, label %7
    i32 159, label %7
    i32 147, label %7
    i32 158, label %7
    i32 157, label %7
    i32 156, label %7
    i32 155, label %7
    i32 154, label %7
    i32 151, label %7
    i32 150, label %7
    i32 149, label %7
    i32 148, label %7
    i32 146, label %7
    i32 145, label %7
    i32 141, label %7
    i32 139, label %7
    i32 138, label %7
    i32 142, label %7
    i32 140, label %7
    i32 143, label %7
    i32 153, label %7
    i32 152, label %7
    i32 137, label %7
    i32 136, label %7
    i32 135, label %7
    i32 133, label %7
    i32 132, label %7
    i32 131, label %7
    i32 134, label %7
    i32 130, label %7
    i32 128, label %7
    i32 129, label %7
  ]

7:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8
  store i32 0, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %7
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
